Correción de Errores

--- a/ProyectoMancariBlue/Views/Animal/Create.cshtml
+++ b/ProyectoMancariBlue/Views/Animal/Create.cshtml
@@ -26,13 +26,13 @@
                         <div class="form-group">
                             <label asp-for="Padre" class="control-label"></label>
                             <input asp-for="Padre" class="form-control" />
-               
+                            <span asp-validation-for="Padre" class="text-danger"></span>
                         </div>
 
                         <div class="form-group">
                             <label asp-for="Madre" class="control-label"></label>
                             <input asp-for="Madre" class="form-control" />
-                    
+                            <span asp-validation-for="Madre" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Raza" class="control-label"></label>
