--- a/ProyectoMancariBlue/Views/Animal/Index.cshtml
+++ b/ProyectoMancariBlue/Views/Animal/Index.cshtml
@@ -649,7 +649,7 @@ else
 
                 Swal.fire({
                     title: 'Confirmación',
-                    text: '¿Estás seguro de que cambiar el esatdo?',
+                    text: '¿Estás seguro de que cambiar el estado?',
                     icon: 'question',
                     showCancelButton: true,
                     confirmButtonText: 'Sí',
