--- a/ProyectoMancariBlue/Views/Animal/IndexG.cshtml
+++ b/ProyectoMancariBlue/Views/Animal/IndexG.cshtml
@@ -9,7 +9,7 @@
 
 <div class="app-title">
     <div>
-        <h1><i class="fa fa-th-list" style="margin-right: 10px;"></i>Registro Generacional</h1>
+        <h1><i class="fa fa-th-list" style="margin-right: 10px;" style="color:white;"></i>Registro Generacional</h1>
         <p>Animales</p>
         <br>
     </div>
@@ -19,13 +19,12 @@
     </ul>
 </div>
 <div class="row">
-
     <div class="col-md-12">
         <div class="tile">
+            <h4>Padres Registrados</h4>
             <div class="tile-body">
                 <div class="table-responsive">
                     <table class="table table-hover table-bordered" id="tanimales">
-                        <h4>Registro Generacional - Padres</h4>
                         <thead>
                             <tr>
                                 <th>
@@ -94,10 +93,10 @@
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
+            <h4>Madres Registradas</h4>
             <div class="tile-body">
                 <div class="table-responsive">
                     <table class="table table-hover table-bordered" id="tanimalesmMother">
-                        <h4>Registro Generacional - Madres</h4>
                         <thead>
                             <tr>
                                 <th>
