--- a/ProyectoMancariBlue/Views/Proveedor/Index.cshtml
+++ b/ProyectoMancariBlue/Views/Proveedor/Index.cshtml
@@ -15,7 +15,7 @@
 }
 <div class="app-title">
     <div>
-        <h1><i class="fa fa-th-list" style="margin-right: 10px;" ></i>Administración de Proveedores</h1>
+        <h1><i class="fa fa-th-list" style="margin-right: 10px;"></i>Administración de Proveedores</h1>
         <p>Proveedores</p>
         <br>
         <a onclick="OpenModal('mdlAddProveedor')" class="btn btn-primary" style="color:white;"><i class="fa fa-plus" aria-hidden="true"></i>Crear Proveedor</a>
@@ -278,7 +278,7 @@ else
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                             <div class="form-group">
                                 <label for="ddlModifyProveedorModal">Identificación</label>
-                                <input type="text" id="txtIdentificacionModify" readonly class="form-control" placeholder="Digite la identificación..." autocomplete="off">
+                                <input type="text" id="txtIdentificacionModify" readonly class="form-control" placeholder="Digite la identificación..." disabled autocomplete="off">
                             </div>
                         </div>
                     </div>
