--- a/ProyectoMancariBlue/Views/Shared/_Layout.cshtml
+++ b/ProyectoMancariBlue/Views/Shared/_Layout.cshtml
@@ -46,25 +46,22 @@
     </style>
     <header class="app-header">
         <a class="app-header__logo" asp-controller="Home" asp-action="Index">MANCARI BLUE</a>
-        <!-- <img src="~/img/logo.png" class="logo-image" width="30px" height="auto">  -->
-        <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"></a>
-
         <ul class="app-nav">
-            <!-- User Menu-->
             <li class="dropdown">
                 <a class="app-nav__item" href="#" data-toggle="dropdown" aria-label="Open Profile Menu"><i class="fa fa-user fa-lg"></i></a>
                 <ul class="dropdown-menu settings-menu dropdown-menu-right">
                     <li><a class="dropdown-item" asp-controller="Empleado" asp-action="CambiarContrasena"><i class="fa fa-lock fa-lg"></i> Cambiar Contraseña</a></li>
-                    <li><a class="dropdown-item" asp-controller="Empleado" asp-action="CerrarSesion"><i class="fa fa-sign-out fa-lg"></i>Cerrar Sesion</a></li>
+                    <li><a class="dropdown-item" href="#" onclick="confirmarCerrarSesion(event)"><i class="fa fa-sign-out fa-lg"></i> Cerrar Sesión</a></li>
                 </ul>
             </li>
         </ul>
     </header>
+
     <!-- Sidebar menu-->
     <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
     <aside class="app-sidebar">
         <div class="app-sidebar__user">
-            <br>
+            <div>
                 @if (Context.Request.Cookies.ContainsKey("NombreCompleto"))
                 {
                     var nombreCompleto = Context.Request.Cookies["NombreCompleto"];
@@ -74,7 +71,7 @@
                 {
                     <span>User</span>
                 }
-            <br>
+
                 @if (Context.Request.Cookies.ContainsKey("RolDescription"))
                 {
                     var rol = Context.Request.Cookies["RolDescription"];
@@ -85,7 +82,6 @@
                     <span>User</span>
                 }
 
-               
             </div>
         </div>
         <ul class="app-menu">
@@ -145,7 +141,7 @@
                     <span class="app-menu__label">Módulo Reportes</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" asp-action="Index" asp-controller="Reporte">Reporetes</a>
+                    <a class="dropdown-item" asp-action="Index" asp-controller="Reporte">Reportes</a>
                 </div>
             </li>
             <li class="nav-item dropdown" id="dropdownMenu">
@@ -173,7 +169,6 @@
 
   
     <script src="~/js/jquery-3.3.1.min.js"></script>
-  
     <script src="~/js/popper.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     <script src="~/js/plugins/chart.js"></script>
@@ -203,7 +198,24 @@
     }
    
     <script type="text/javascript">
+        function confirmarCerrarSesion(event) {
+            event.preventDefault(); 
 
+            Swal.fire({
+                title: '¿Estás seguro?',
+                text: "Se cerrará la sesión actual.",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, cerrar sesión',
+                cancelButtonText: 'Cancelar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    window.location.href = '@Url.Action("CerrarSesion", "Empleado")';
+                }
+            });
+        }
 
         function OpenModal(modal) {
 
