--- a/ProyectoMancariBlue/Views/Empleado/CambiarContrasena.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/CambiarContrasena.cshtml
@@ -26,6 +26,10 @@
         </div>
         <div class="form-group btn-container">
             <button type="submit" class="btn btn-primary btn-block" href=""><i class="fa fa-sign-in fa-lg fa-fw"></i>Cambiar</button>
+            <a href="@Url.Action("Index", "Home")" class="btn btn-danger btn-block">
+                <i class="fa fa-sign-in fa-lg fa-fw"></i> Volver
+            </a>
         </div>
+
     </form>
 </div>
